--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 </div>
 </header>
 
-<!-- <section> -->
 <div class="container" id="content">
 
 <!-- <blockquote>
@@ -118,64 +117,63 @@
 
 <div class="col-md-4">
   <div class="thumbnail">
-      <a href="#"><img src="images/1.jpg" alt="...">
+      <a href="http://aquaregia.de/"><img src="AquaRegia-Band-Webseite.jpg" alt="AquaRegia Band Webseite"></a>
       <div class="caption">
-        <h3>Satzgenerator</h3></a>
-        <p>Webanwendung in Python, JavaScript, HTML und CSS. Verwendet JQuery, Bootstrap und die von mir entwickelte Python-Bibliothek <a href="#">PyZufall</a>.</p>
+        <h3>AquaRegia Band</h3>
+        <p>Webseite und Fotos für die Band AquaRegia.</p>
       </div>
   </div>
 </div>
 
 <div class="col-md-4">
     <div class="thumbnail">
-      <a href="#"><img src="images/1.jpg" alt="..."></a>
+      <a href="http://brennblatt.de/"><img src="Karl-Brennblatt-Webseite.jpg" alt="Karl Brennblatt Webseite"></a>
       <div class="caption">
-        <h3>Personendatengenerator</h3>
-        <p>Generator für zufällige Personendaten in Perl, Wordpress als CMS für eine Online-Datenbank.</p>
+        <h3>Karl Brennblatt</h3>
+        <p>Webseite für den Künstler Karl Brennblatt.</p>
       </div>
     </div>
 </div>
 
 <div class="col-md-4">
-      <div class="thumbnail">
-      <a href="#"><img src="images/1.jpg" alt="..."></a>
+    <div class="thumbnail">
+      <a href="https://www.youtube.com/watch?v=9D1lMTwcLgY"><img src="Wortspiele-a-la-Polysemia-Fanvideo.jpg" alt="Wortspiele a la Polysemia Fanvideo"></a>
       <div class="caption">
         <h3>Wortspiele à la Polysemia</h3>
-        <p>Ein Fanvideo zur Sendung Polysemia von mir und ein paar Freunden.</p>
+        <p>Ein Fanvideo zur Sendung <a href="http://www.youtube.com/user/RumbleBeast666">Polysemia</a> mit Freunden.</p>
       </div>
     </div>
 </div>
 
 </div>
-
 <div class="row">
 
 <div class="col-md-4">
     <div class="thumbnail">
-      <a href="#"><img src="images/1.jpg" alt="..."></a>
+      <a href="http://satzgenerator.de/"><img src="satzgenerator.jpg" alt="Satzgenerator"></a>
       <div class="caption">
-        <h3>Wortspiele à la Polysemia</h3>
-        <p>Ein Fanvideo zur Sendung Polysemia von mir und ein paar Freunden.</p>
+        <h3>Satzgenerator</h3>
+        <p>Webanwendung in Python, JavaScript, HTML und CSS. Verwendet JQuery, Bootstrap und die von mir entwickelte Python-Bibliothek <a href="#">PyZufall</a>.</p>
       </div>
     </div>
 </div>
 
 <div class="col-md-4">
      <div class="thumbnail">
-      <a href="#"><img src="images/1.jpg" alt="..."></a>
+      <a href="http://davidak.de/gna/"><img src="GNA-Clan-Webseite.jpg" alt="GNA Clan Webseite"></a>
       <div class="caption">
-        <h3>Wortspiele à la Polysemia</h3>
-        <p>Ein Fanvideo zur Sendung Polysemia von mir und ein paar Freunden.</p>
+        <h3>GNA|Clan</h3>
+        <p>Webseite und Game-Server für den GNA Clan (<a href="http://assault.cubers.net/">AssaultCube</a>), den ich mit Freunden gegründet habe.</p>
       </div>
     </div>
 </div>
 
 <div class="col-md-4">
      <div class="thumbnail">
-      <a href="#"><img src="images/1.jpg" alt="..."></a>
+      <a href="http://davidak.de/random-graph/"><img src="Random-Graph.jpg" alt="Random Graph"></a>
       <div class="caption">
-        <h3>Wortspiele à la Polysemia</h3>
-        <p>Ein Fanvideo zur Sendung Polysemia von mir und ein paar Freunden.</p>
+        <h3>Random Graph</h3>
+        <p>Echtzeit Graph mit zufälligen Daten.</p>
       </div>
     </div>
 </div>
@@ -184,19 +182,26 @@
 
 <table class="table table-striped">
   <tr>
-    <th>Projekt 7</th>
-    <td>Ein weiteres Projekt, dass nicht so wichtig ist oder nicht grafisch durch ein Bild representiert werden kann.</td>
+    <th><a href="http://concert.arte.tv/de/collections/moers-festival-2014">Moers Festival 2014</a></th>
+    <td>Kameramann bei fast allen Bands und auch einmal Regie/Bildmischer.</td>
   </tr>
   <tr>
-    <th>Projekt 8</th>
-    <td>Ein weiteres Projekt, dass nicht so wichtig ist oder nicht grafisch durch ein Bild representiert werden kann.</td>
+    <th><a href="https://github.com/davidak/random-vcard-generator">Random VCard-Generator</a></th>
+    <td>Das Kommandozeilen-Tool generiert VCards mit zufälligen, aber plausiblen Daten.</td>
   </tr>
   <tr>
-    <th>Projekt 9</th>
-    <td>Ein weiteres Projekt, dass nicht so wichtig ist oder nicht grafisch durch ein Bild representiert werden kann.</td>
+    <th><a href="https://pyzufall.readthedocs.org/de/latest/">PyZufall</a></th>
+    <td>Die Python-Bibliothek PyZufall beinhaltet diverse Funktionen für das Generieren zufälliger Daten.</td>
+  </tr>
+  <tr>
+    <th><a href="https://github.com/davidak/python-peniscoin-miner">Peniscoin Miner</a></th>
+    <td>Eine Parodie auf <a href="http://de.wikipedia.org/wiki/Bitcoin">Bitcoin</a> und andere <a href="http://de.wikipedia.org/wiki/Kryptow%C3%A4hrung">Kryptowährungen</a> in Form eines lauffähigen Programms.</td>
+  </tr>
+  <tr>
+    <th><a href="http://owncloud.org/">ownCloud</a></th>
+    <td>Freie Software zum Synchronisieren und Teilen von Dateien. Ich habe durch Testen und über 60 Bugreports dazu beigetragen.</td>
   </tr>
 </table>
-<!-- </section> -->
 
 <footer>
 <p>&copy; 2005 - 2014 davidak<a class="pull-right" href="#">Impressum</a></p>
