--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <ul class="nav nav-justified">
   <div class="navbar-center"><img src="images/logo.png" alt="davidak logo" class="img-circle brand"></div>
   <div class="navbar-est">seit 2005</div>
-  <li><a href="#">Wiki</a></li>
-  <li><a href="#">Weblog</a></li>
+  <li><a href="http://davidak.de/wiki">Wiki</a></li>
+  <li><a href="http://davidak.de/blog">Weblog</a></li>
   <li></li>
-  <li><a href="#">Fotos</a></li>
-  <li><a href="#">Videos</a></li>
+  <li><a href="http://www.flickr.com/photos/davidak">Fotos</a></li>
+  <li><a href="http://www.youtube.com/user/d4v1d4k">Videos</a></li>
 </ul>
 </div>
 
@@ -57,48 +57,11 @@
 <p class="text-justify">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
 <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
   </div>
+
   <div class="col-md-6">
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Positionsanzeiger -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
 
-  <!-- Verpackung für die Elemente -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="images/1.jpg" alt="Foto von davidak">
-      <div class="carousel-caption">
-        <p>Foto von davidak</p>
-      </div>
-    </div>
-    <div class="item">
       <img src="images/2.jpg" alt="Foto von davidak">
-      <div class="carousel-caption">
-        <p>Weiteres Foto von davidak</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="images/3.jpg" alt="Foto von davidak">
-    </div>
-    <div class="item">
-      <img src="images/4.jpg" alt="Foto von davidak">
-    </div>
-    <div class="item">
-      <img src="images/5.jpg" alt="Foto von davidak">
-    </div>
-  </div>
 
-  <!-- Schalter -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
 
 <br>
 <dl class="dl-horizontal">
@@ -162,7 +125,7 @@
      <div class="thumbnail">
       <a href="http://davidak.de/gna/"><img src="GNA-Clan-Webseite.jpg" alt="GNA Clan Webseite"></a>
       <div class="caption">
-        <h3>GNA|Clan</h3>
+        <h3>GNA Clan</h3>
         <p>Webseite und Game-Server für den GNA Clan (<a href="http://assault.cubers.net/">AssaultCube</a>), den ich mit Freunden gegründet habe.</p>
       </div>
     </div>
