--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>davidak</title>
-    <meta name="description" content="Private Webseite von davidak.">
+    <meta name="description" content="Private Webseite von davidak">
     <meta name="author" content="davidak">
     <meta name="keywords" content="">
     <link rel="icon" type="image/png" href="images/logo.png" />
@@ -62,7 +62,8 @@
 
 <div class="fotorama" data-fit="cover" data-transition="crossfade" data-loop="true" data-autoplay="true" data-keyboard="true">
   <img src="images/1.jpg" alt="Foto von davidak">
-  <img src="images/2.jpg" alt="Foto von davidak">
+  <img src="davidak-Portrait-2.jpg" alt="Portrait von davidak">
+  <img src="davidak-Portrait-3.jpg" alt="Portrait von davidak">
   <img src="images/3.jpg" alt="Foto von davidak">
   <img src="images/4.jpg" alt="Foto von davidak">
 </div>
@@ -87,7 +88,7 @@
       <a href="http://aquaregia.de/"><img src="AquaRegia-Band-Webseite.jpg" alt="AquaRegia Band Webseite"></a>
       <div class="caption">
         <h3>AquaRegia Band</h3>
-        <p>Webseite und Fotos für die Band AquaRegia.</p>
+        <p>Webseite und Fotos für die Band <a href="http://aquaregia.de/">AquaRegia</a>.</p>
       </div>
   </div>
 </div>
@@ -97,7 +98,7 @@
       <a href="http://brennblatt.de/"><img src="Karl-Brennblatt-Webseite.jpg" alt="Karl Brennblatt Webseite"></a>
       <div class="caption">
         <h3>Karl Brennblatt</h3>
-        <p>Webseite für den Künstler Karl Brennblatt.</p>
+        <p>Webseite für den Künstler <a href="http://brennblatt.de/">Karl Brennblatt</a>.</p>
       </div>
     </div>
 </div>
@@ -120,7 +121,7 @@
       <a href="http://satzgenerator.de/"><img src="Satzgenerator.jpg" alt="Satzgenerator"></a>
       <div class="caption">
         <h3>Satzgenerator</h3>
-        <p>Webanwendung in Python, JavaScript, HTML und CSS. Verwendet JQuery, Bootstrap und die von mir entwickelte Python-Bibliothek <a href="#">PyZufall</a>.</p>
+        <p>Webanwendung in Python, JavaScript, HTML und CSS. Verwendet JQuery, Bootstrap und die von mir entwickelte Python-Bibliothek <a href="http://pyzufall.readthedocs.org/de/latest/">PyZufall</a>.</p>
       </div>
     </div>
 </div>
@@ -154,7 +155,7 @@
   </tr>
   <tr>
     <th><a href="https://github.com/davidak/random-vcard-generator">Random VCard-Generator</a></th>
-    <td>Das Kommandozeilen-Tool generiert VCards mit zufälligen, aber plausiblen Daten.</td>
+    <td>Das Kommandozeilen-Programm generiert VCards mit zufälligen, aber plausiblen Daten.</td>
   </tr>
   <tr>
     <th><a href="https://pyzufall.readthedocs.org/de/latest/">PyZufall</a></th>
