Links geändert und andere Fotos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>davidak</title>
     <meta name="description" content="Private Webseite von davidak">
     <meta name="author" content="davidak">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Nerd">
     <link rel="icon" type="image/png" href="images/logo.png" />
 
     <!-- Bootstrap -->
@@ -23,6 +23,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body>
 
 <header>
@@ -46,26 +47,27 @@
 <div class="container" id="content">
 
 <!-- <blockquote>
-  <p>Mann hat es nicht leicht im Leben.</p>
-  <footer>Ein Sexistischer weißer CIS-Mann</footer>
+  <p>Ich schieß mich jetzt ins All indem ich mir eine Bazooka reinsteck (Huiii)</p>
+  <footer>K.I.Z</footer>
 </blockquote> -->
 
 <div class="row">
   <div class="col-md-6">
-<p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-<p class="text-justify">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+<p class="lead">Hallo, ich bin David aka davidak.</p>
+
+<p class="text-justify"></p>
+
 <p class="text-justify">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+
 <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
   </div>
 
   <div class="col-md-6">
 
-<div class="fotorama" data-fit="cover" data-transition="crossfade" data-loop="true" data-autoplay="true" data-keyboard="true">
-  <img src="images/1.jpg" alt="Foto von davidak">
-  <img src="davidak-Portrait-2.jpg" alt="Portrait von davidak">
-  <img src="davidak-Portrait-3.jpg" alt="Portrait von davidak">
+<div class="fotorama" data-fit="cover" data-transition="crossfade" data-loop="true" data-shuffle="true" data-keyboard="true">
+  <img src="davidak-Portrait-2.jpg" alt="Foto von davidak">
+  <img src="davidak-Portrait-3.jpg" alt="Foto von davidak">
   <img src="images/3.jpg" alt="Foto von davidak">
-  <img src="images/4.jpg" alt="Foto von davidak">
 </div>
 
 <br>
@@ -108,7 +110,7 @@
       <a href="https://www.youtube.com/watch?v=9D1lMTwcLgY"><img src="Wortspiele-a-la-Polysemia-Fanvideo.jpg" alt="Wortspiele a la Polysemia Fanvideo"></a>
       <div class="caption">
         <h3>Wortspiele à la Polysemia</h3>
-        <p>Ein Fanvideo zur Sendung <a href="http://www.youtube.com/user/RumbleBeast666">Polysemia</a> mit Freunden.</p>
+        <p>Ein Fanvideo zur Sendung <a href="http://www.youtube.com/playlist?list=PL4F720557B5A9902E">Polysemia</a> mit Freunden.</p>
       </div>
     </div>
 </div>
@@ -172,14 +174,13 @@
 </table>
 
 <footer>
-<p>&copy; 2005 - 2014 davidak<a class="pull-right" href="#">Impressum</a></p>
+<p>&copy; 2005 - 2014 davidak<a class="pull-right" href="/impressum.html">Impressum</a></p>
 </footer>
 
 </div> <!-- #container -->
 
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/fotorama.js"></script>
