Profiltext, erste Version

--- a/index.html
+++ b/index.html
@@ -55,11 +55,21 @@
   <div class="col-md-6">
 <p class="lead">Hallo, ich bin David aka davidak.</p>
 
-<p class="text-justify"></p>
+<p class="text-justify">Ich arbeite als Administrator in einer IT-Agentur. Mit einem 5 köpfigen Team betreiben wir mehr als 150 Linux-Server im Rechenzentrum.</a>
 
-<p class="text-justify">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+<p class="text-justify">In meiner freien Zeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann bei Live-Sendungen.
+Desweiteren unterstütze ich freie und Open Source-Software, sei es durch Geld, Testen, Verbesserungsvorschläge oder Änderungen am Quelltext.
+Ich programmiere auch an eigenen Projekten und designe Webseiten. Aber ich kann auch stundenlang Youtube-Videos schauen, auf Imageboards lauern oder Musik hören, gerne auch auf Konzerten oder Festivals.</p>
 
-<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+<p class="text-justify">Ich möchte mich gesund ernähren. Nach meiner Recherche ist das aus wissenschaftlicher Sicht <i>high carb vegan</i>. Auch könnte ich mich als <i>Straight Edge</i> bezeichnen, obgleich ich den Begriff erst viel später kennen gelernt habe.</p>
+
+<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, GeoCaching, Bushcraft, Umweltschutz, Tierschutz">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
+So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freier Software.</p>
+
+<p class="text-justify">Wichtig finde ich Frieden, Toleranz, Nachhaltigkeit, Privatsphäre und Offene Standards.</p>
+
+<p class="text-justify">Ich mag Mädchen mit kurzen Haaren bzw generell Menschen, denen man das Geschlecht nicht auf den ersten Blick ansieht, Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, diverse Musik, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal. Auch mag ich gerne mal alleine sein und über alles Mögliche nachdenken.</p>
+
   </div>
 
   <div class="col-md-6">
@@ -184,5 +194,11 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/fotorama.js"></script>
+
+    <script>
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+    </script>
 </body>
 </html>
