Logo *wirklich* mittig

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 
 <div class="navbar" role="navigation">
 <ul class="nav nav-justified">
-  <div class="navbar-center"><img src="images/logo.png" alt="davidak logo" class="img-circle brand"></div>
-  <div class="navbar-est">seit 2005</div>
+  
   <li><a href="http://davidak.de/wiki">Wiki</a></li>
   <li><a href="http://davidak.de/blog">Weblog</a></li>
-  <li></li>
+  <li>
+  <div class="navbar-center"><img src="images/logo.png" alt="davidak logo" class="img-circle brand"></div>
+  <div class="navbar-est">seit 2005</div>
+  </li>
   <li><a href="http://www.flickr.com/photos/davidak">Fotos</a></li>
   <li><a href="http://www.youtube.com/user/d4v1d4k">Videos</a></li>
 </ul>
@@ -85,7 +87,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
   <dt>E-Mail:</dt>
   <dd>post@davidak.de</dd>
   <dt>PGP:</dt>
-  <dd>B60197B0</dd>
+  <dd><a href="gpg-pubkey-davidak.asc">B60197B0</a></dd>
 </dl>
 
   </div>
