--- a/index.html
+++ b/index.html
@@ -48,47 +48,39 @@
 
 <div class="container" id="content">
 
-<!-- <blockquote>
-  <p>Ich schieß mich jetzt ins All indem ich mir eine Bazooka reinsteck (Huiii)</p>
-  <footer>K.I.Z</footer>
-</blockquote> -->
-
 <div class="row">
   <div class="col-md-6">
 <p class="lead">Hallo, ich bin David aka davidak.</p>
 
-<p class="text-justify">Ich arbeite als Administrator in einer IT-Agentur. Mit einem 5 köpfigen Team betreiben wir mehr als 150 Linux-Server im Rechenzentrum.</a>
+<p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Mit unserem 5 köpfigen Team betreiben wir mehr als 150 Linux-Server im Rechenzentrum.</a>
 
-<p class="text-justify">In meiner freien Zeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann bei Live-Sendungen.
-Desweiteren unterstütze ich freie und Open Source-Software, sei es durch Geld, Testen, Verbesserungsvorschläge oder Änderungen am Quelltext.
-Ich programmiere auch an eigenen Projekten und designe Webseiten. Aber ich kann auch stundenlang Youtube-Videos schauen, auf Imageboards lauern oder Musik hören, gerne auch auf Konzerten oder Festivals.</p>
+<p class="text-justify">In meiner Freizeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann bei Live-Sendungen.
+Desweiteren unterstütze ich freie und Open Source-Software, sei es durch Spenden, Testen, Verbesserungsvorschläge oder Änderungen am Quelltext.
+Ich programmiere auch an eigenen Projekten und designe Webseiten. Meine eigenen Werke stelle ich unter freie Lizenzen. Ich kann auch stundenlang Youtube-Videos schauen oder Musik hören, gerne auch auf Konzerten oder Festivals.</p>
 
-<p class="text-justify">Ich möchte mich gesund ernähren. Nach meiner Recherche ist das aus wissenschaftlicher Sicht <i>high carb vegan</i>. Auch könnte ich mich als <i>Straight Edge</i> bezeichnen, obgleich ich den Begriff erst viel später kennen gelernt habe.</p>
+<p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche ist das aus wissenschaftlicher Sicht <i>high carb vegan</i>. Auch könnte ich mich als <i>Straight Edge</i> bezeichnen, obgleich ich den Begriff erst viel später kennen gelernt habe und nicht zu einer Szene gehöre. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
 
-<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, GeoCaching, Bushcraft, Umweltschutz, Tierschutz">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
+<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, GeoCaching, Bushcraft, Umweltschutz, Tierschutz, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
 So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freier Software.</p>
 
-<p class="text-justify">Wichtig finde ich Frieden, Toleranz, Nachhaltigkeit, Privatsphäre und Offene Standards.</p>
-
-<p class="text-justify">Ich mag Mädchen mit kurzen Haaren bzw generell Menschen, denen man das Geschlecht nicht auf den ersten Blick ansieht, Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, diverse Musik, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal. Auch mag ich gerne mal alleine sein und über alles Mögliche nachdenken.</p>
-
+<p class="text-justify">Ich mag Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, <a href="http://www.lastfm.de/user/d4vidak">diverse Musik</a>, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal.</p>
   </div>
 
   <div class="col-md-6">
 
 <div class="fotorama" data-fit="cover" data-transition="crossfade" data-loop="true" data-shuffle="true" data-keyboard="true">
-  <img src="davidak-Portrait-2.jpg" alt="Foto von davidak">
-  <img src="davidak-Portrait-3.jpg" alt="Foto von davidak">
+  <img src="davidak-Foto-2.jpg" alt="Foto von davidak">
+  <img src="davidak-Foto-3.jpg" alt="Foto von davidak">
   <img src="images/3.jpg" alt="Foto von davidak">
 </div>
 
 <br>
-<dl class="dl-horizontal">
-  <dt>E-Mail:</dt>
-  <dd>post@davidak.de</dd>
-  <dt>PGP:</dt>
-  <dd><a href="gpg-pubkey-davidak.asc">B60197B0</a></dd>
-</dl>
+
+<p class="text-center">
+  <b>E-Mail: </b>post at davidak.de<br>
+  <b>PGP: </b><a href="gpg-pubkey-davidak.asc">B60197B0</a><br>
+  oder <a href="">Kontaktformular</a>
+</p>
 
   </div>
 </div>
@@ -175,6 +167,15 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
     <th><a href="https://pyzufall.readthedocs.org/de/latest/">PyZufall</a></th>
     <td>Die Python-Bibliothek PyZufall beinhaltet diverse Funktionen für das Generieren zufälliger Daten.</td>
   </tr>
+  <tr>
+    <th><a href="http://davidak.de/personen/">Personendatenbank</a></th>
+    <td>Daten von über 10.000 Personen. Zufällig generiert mit einem <a href="http://davidak.de/wiki/perl/personendatengenerator">Perl-Script</a>.</td>
+  </tr>
+  <tr>
+    <th><a href="http://davidak.de/wiki/perl/namengenerator">Namengenerator</a></th>
+    <td>Ein Perl-Script, um Namen zu generieren.</td>
+  </tr>
+
   <tr>
     <th><a href="https://github.com/davidak/python-peniscoin-miner">Peniscoin Miner</a></th>
     <td>Eine Parodie auf <a href="http://de.wikipedia.org/wiki/Bitcoin">Bitcoin</a> und andere <a href="http://de.wikipedia.org/wiki/Kryptow%C3%A4hrung">Kryptowährungen</a> in Form eines lauffähigen Programms.</td>
