--- a/index.html
+++ b/index.html
@@ -52,26 +52,27 @@
   <div class="col-md-6">
 <p class="lead">Hallo, ich bin David aka davidak.</p>
 
-<p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Mit unserem 5 köpfigen Team betreiben wir mehr als 150 Linux-Server im Rechenzentrum.</a>
+<p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Meine Abteilung verwaltet mehr als 150 Linux-Server im Rechenzentrum.</a>
 
 <p class="text-justify">In meiner Freizeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann bei Live-Sendungen.
-Desweiteren unterstütze ich freie und Open Source-Software, sei es durch Spenden, Testen, Verbesserungsvorschläge oder Änderungen am Quelltext.
-Ich programmiere auch an eigenen Projekten und designe Webseiten. Meine eigenen Werke stelle ich unter freie Lizenzen. Ich kann auch stundenlang Youtube-Videos schauen oder Musik hören, gerne auch auf Konzerten oder Festivals.</p>
+Desweiteren unterstütze ich freie und Open Source-Software, sei es durch Spenden, Testen, Fehlerberichte, Übersetzen oder Beitragen von Quelltext.
+Ich programmiere auch an eigenen Projekten und gestalte Webseiten. Meine Werke stelle ich dabei unter freie Lizenzen, damit jeder sie nutzen und verbessern kann. Ich schaue aber auch gerne mal Youtube-Videos oder höre Musik, gerne auch auf Konzerten oder Festivals.</p>
 
-<p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche ist das aus wissenschaftlicher Sicht <i>high carb vegan</i>. Auch könnte ich mich als <i>Straight Edge</i> bezeichnen, obgleich ich den Begriff erst viel später kennen gelernt habe und nicht zu einer Szene gehöre. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
+<p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche bedeutet das <i>high carb</i> und hauptsächlich <i>vegan</i>. Auch könnte ich mich als <i>Straight Edge</i> bezeichnen, obgleich ich den Begriff erst viel später kennen gelernt habe und nicht zu einer Szene gehöre. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
 
 <p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, GeoCaching, Bushcraft, Umweltschutz, Tierschutz, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
 So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freier Software.</p>
 
-<p class="text-justify">Ich mag Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, <a href="http://www.lastfm.de/user/d4vidak">diverse Musik</a>, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal.</p>
+<p class="text-justify">Ich mag schöne und intuitive grafische Benutzeroberflächen, Wald, große Hunde, Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, <a href="http://www.lastfm.de/user/d4vidak">diverse Musik</a>, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal.</p>
   </div>
 
   <div class="col-md-6">
 
 <div class="fotorama" data-fit="cover" data-transition="crossfade" data-loop="true" data-shuffle="true" data-keyboard="true">
+  <img src="davidak-Foto-1.jpg" alt="Foto von davidak">
   <img src="davidak-Foto-2.jpg" alt="Foto von davidak">
   <img src="davidak-Foto-3.jpg" alt="Foto von davidak">
-  <img src="images/3.jpg" alt="Foto von davidak">
+  <img src="davidak-Foto-4.jpg" alt="Foto von davidak">
 </div>
 
 <br>
