Aktuelles Jahr per JS, Formatierung verbessert

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 <div class="navbar" role="navigation">
 <ul class="nav nav-justified">
-  
   <li><a href="http://davidak.de/wiki">Wiki</a></li>
   <li><a href="http://davidak.de/blog">Weblog</a></li>
   <li>
@@ -49,7 +48,7 @@
 <div class="container" id="content">
 
 <div class="row">
-  <div class="col-md-6">
+<div class="col-md-6">
 <p class="lead">Hallo, ich bin David aka davidak.</p>
 
 <p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Meine Abteilung verwaltet mehr als 150 Linux-Server im Rechenzentrum.</a>
@@ -64,9 +63,9 @@ Ich programmiere auch an eigenen Projekten und gestalte Webseiten. Meine Werke s
 So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freier Software.</p>
 
 <p class="text-justify">Ich mag schöne und intuitive grafische Benutzeroberflächen, Wald, große Hunde, Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, <a href="http://www.lastfm.de/user/d4vidak">diverse Musik</a>, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal.</p>
-  </div>
+</div>
 
-  <div class="col-md-6">
+<div class="col-md-6">
 
 <div class="fotorama" data-fit="cover" data-transition="crossfade" data-loop="true" data-shuffle="true" data-keyboard="true">
   <img src="davidak-Foto-1.jpg" alt="Foto von davidak">
@@ -83,7 +82,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
   oder <a href="">Kontaktformular</a>
 </p>
 
-  </div>
+</div>
 </div>
 
 <h2>Meine Projekte</h2>
@@ -121,6 +120,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 </div>
 
 </div>
+
 <div class="row">
 
 <div class="col-md-4">
@@ -188,7 +188,8 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 </table>
 
 <footer>
-<p>&copy; 2005 - 2014 davidak<a class="pull-right" href="/impressum.html">Impressum</a></p>
+<p>&copy; 2005 - <script>document.write(new Date().getFullYear())</script><noscript>2014</noscript> davidak
+<a class="pull-right" href="/impressum.html">Impressum</a></p>
 </footer>
 
 </div> <!-- #container -->
