Reihenfolge der Projekte geändert, Text verbessert

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
 <p class="text-justify">In meiner Freizeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann bei Live-Sendungen.
 Desweiteren unterstütze ich freie und Open Source-Software, sei es durch Spenden, Testen, Fehlerberichte, Übersetzen oder Beitragen von Quelltext.
-Ich programmiere auch an eigenen Projekten und gestalte Webseiten. Meine Werke stelle ich dabei unter freie Lizenzen, damit jeder sie nutzen und verbessern kann. Ich schaue aber auch gerne mal Youtube-Videos oder höre Musik, gerne auch auf Konzerten oder Festivals.</p>
+Ich programmiere auch an eigenen Projekten und gestalte Webseiten. Meine Werke stelle ich dabei unter freie Lizenzen, damit jeder sie nutzen und verbessern kann. Ich schaue aber auch gerne Youtube-Videos oder höre Musik, gerne auch auf Konzerten oder Festivals.</p>
 
 <p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche bedeutet das <i>high carb</i> und hauptsächlich <i>vegan</i>. Auch könnte ich mich als <i>Straight Edge</i> bezeichnen, obgleich ich den Begriff erst viel später kennen gelernt habe und nicht zu einer Szene gehöre. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
 
-<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, GeoCaching, Bushcraft, Umweltschutz, Tierschutz, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
+<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, GeoCaching, Bushcraft, Umweltschutz, Tierschutz, Lichttechnik und DMX-Steuerung, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
 So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freier Software.</p>
 
 <p class="text-justify">Ich mag schöne und intuitive grafische Benutzeroberflächen, Wald, große Hunde, Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, <a href="http://www.lastfm.de/user/d4vidak">diverse Musik</a>, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal.</p>
@@ -90,6 +90,16 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 <div class="row">
 
 <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="https://www.youtube.com/watch?v=9D1lMTwcLgY"><img src="Wortspiele-a-la-Polysemia-Fanvideo.jpg" alt="Wortspiele a la Polysemia Fanvideo"></a>
+      <div class="caption">
+        <h3>Wortspiele à la Polysemia</h3>
+        <p>Ein Fanvideo zur Sendung <a href="http://www.youtube.com/playlist?list=PL4F720557B5A9902E">Polysemia</a> mit Freunden.</p>
+      </div>
+    </div>
+</div>
+
+<div class="col-md-4">
   <div class="thumbnail">
       <a href="http://aquaregia.de/"><img src="AquaRegia-Band-Webseite.jpg" alt="AquaRegia Band Webseite"></a>
       <div class="caption">
@@ -109,36 +119,16 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
     </div>
 </div>
 
-<div class="col-md-4">
-    <div class="thumbnail">
-      <a href="https://www.youtube.com/watch?v=9D1lMTwcLgY"><img src="Wortspiele-a-la-Polysemia-Fanvideo.jpg" alt="Wortspiele a la Polysemia Fanvideo"></a>
-      <div class="caption">
-        <h3>Wortspiele à la Polysemia</h3>
-        <p>Ein Fanvideo zur Sendung <a href="http://www.youtube.com/playlist?list=PL4F720557B5A9902E">Polysemia</a> mit Freunden.</p>
-      </div>
-    </div>
-</div>
-
 </div>
 
 <div class="row">
-
-<div class="col-md-4">
-    <div class="thumbnail">
-      <a href="http://satzgenerator.de/"><img src="Satzgenerator.jpg" alt="Satzgenerator"></a>
-      <div class="caption">
-        <h3>Satzgenerator</h3>
-        <p>Webanwendung in Python, JavaScript, HTML und CSS. Verwendet JQuery, Bootstrap und die von mir entwickelte Python-Bibliothek <a href="http://pyzufall.readthedocs.org/de/latest/">PyZufall</a>.</p>
-      </div>
-    </div>
-</div>
 
 <div class="col-md-4">
      <div class="thumbnail">
       <a href="http://davidak.de/gna/"><img src="GNA-Clan-Webseite.jpg" alt="GNA Clan Webseite"></a>
       <div class="caption">
         <h3>GNA Clan</h3>
-        <p>Webseite und Game-Server für den GNA Clan (<a href="http://assault.cubers.net/">AssaultCube</a>), den ich mit Freunden gegründet habe.</p>
+        <p>Webseite und Game-Server für den GNA Clan.</p>
       </div>
     </div>
 </div>
@@ -149,6 +139,16 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
       <div class="caption">
         <h3>Random Graph</h3>
         <p>Echtzeit Graph mit zufälligen Daten.</p>
+      </div>
+    </div>
+</div>
+
+<div class="col-md-4">
+    <div class="thumbnail">
+      <a href="http://satzgenerator.de/"><img src="Satzgenerator.jpg" alt="Satzgenerator"></a>
+      <div class="caption">
+        <h3>Satzgenerator</h3>
+        <p>Zufällige Sätze generieren und bewerten.</p>
       </div>
     </div>
 </div>
