--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Private Webseite von davidak">
     <meta name="author" content="davidak">
     <meta name="keywords" content="Nerd">
-    <link rel="icon" type="image/png" href="images/logo.png" />
+    <link rel="icon" type="image/png" href="logo.png" />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
   <li><a href="http://davidak.de/wiki">Wiki</a></li>
   <li><a href="http://davidak.de/blog">Weblog</a></li>
   <li>
-  <div class="navbar-center"><img src="images/logo.png" alt="davidak logo" class="img-circle brand"></div>
+  <div class="navbar-center"><img src="logo.png" alt="davidak logo" class="img-circle brand"></div>
   <div class="navbar-est">seit 2005</div>
   </li>
   <li><a href="http://www.flickr.com/photos/davidak">Fotos</a></li>
