vorerst finale Version des Textes

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 <div class="col-md-6">
 <p class="lead">Hallo, ich bin David aka davidak.</p>
 
-<p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Meine Abteilung verwaltet mehr als 150 Linux-Server im Rechenzentrum.</a>
+<p class="text-justify">Ich arbeite als Administrator bei einer IT-Agentur. Meine Abteilung verwaltet mehr als 150 Linux-Server im Rechenzentrum und nebenbei die Technik im Büro.</a>
 
 <p class="text-justify">In meiner Freizeit fotografiere ich, produziere Videos und war schon mehrfach Kameramann bei Live-Sendungen.
 Desweiteren unterstütze ich freie und Open Source-Software, sei es durch Spenden, Testen, Fehlerberichte, Übersetzen oder Beitragen von Quelltext.
 Ich programmiere auch an eigenen Projekten und gestalte Webseiten. Meine Werke stelle ich dabei unter freie Lizenzen, damit jeder sie nutzen und verbessern kann. Ich schaue aber auch gerne Youtube-Videos oder höre Musik, gerne auch auf Konzerten oder Festivals.</p>
 
-<p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche bedeutet das <i>high carb</i> und hauptsächlich <i>vegan</i>. Auch könnte ich mich als <i>Straight Edge</i> bezeichnen, obgleich ich den Begriff erst viel später kennen gelernt habe und nicht zu einer Szene gehöre. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
+<p class="text-justify">Ich versuche mich gesund zu ernähren. Nach meiner Recherche bedeutet das <i>high carb</i> und <i>vegan</i>. Auch habe ich nie geraucht, trinke seit 2010 kein Alkohol mehr (davor auch nie viel) und verzichte schon lange auf ungesundes Fastfood. Von daher könnte man mich als <i>Straight Edge</i> bezeichnen. Wenn möglich fahre ich mit dem Fahrrad und wandere gerne.</p>
 
-<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, GeoCaching, Bushcraft, Umweltschutz, Tierschutz, Lichttechnik und DMX-Steuerung, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
+<p class="text-justify"><a href="#" data-toggle="tooltip" data-placement="right" title="Bedingungsloses Grundeinkommen, Permakultur, Survival, Bushcraft, Umweltschutz, Tierschutz, GeoCaching, Urban Exploration, Klettern, Parkour, Luzides Träumen, Esperanto (Sprache), Künstliche Intelligenz, Mesh-Netzwerke, P2P, Zero Knowledge-Systeme, Kryptographie, Bühnentechnik und DMX-Steuerung, Elektronik, Hardware Hacking">Sehr viele Themen</a> würden mich interessieren, allerdings ist die Zeit begrenzt und ich versuche mich auf die zu fokussieren, die mir am wichtigsten sind.
 So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freier Software.</p>
 
 <p class="text-justify">Ich mag schöne und intuitive grafische Benutzeroberflächen, Wald, große Hunde, Fotos von verlassenen Bauten (Urban Exploration), authentische Filme, <a href="http://www.lastfm.de/user/d4vidak">diverse Musik</a>, zuletzt vorallem Hip-Hop, Trap, Dubstep, aber immernoch viel Metal.</p>
@@ -79,7 +79,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
 <p class="text-center">
   <b>E-Mail: </b>post at davidak.de<br>
   <b>PGP: </b><a href="gpg-pubkey-davidak.asc">B60197B0</a><br>
-  oder <a href="">Kontaktformular</a>
+  <!--oder <a href="#">Kontaktformular</a> gibt es noch nicht :\ -->
 </p>
 
 </div>
@@ -148,7 +148,7 @@ So beschäftige ich mich hauptsächlich mit IT-Sicherheit, Netzpolitik und freie
       <a href="http://satzgenerator.de/"><img src="Satzgenerator.jpg" alt="Satzgenerator"></a>
       <div class="caption">
         <h3>Satzgenerator</h3>
-        <p>Zufällige Sätze generieren und bewerten.</p>
+        <p>Zufällige Sätze generieren, bewerten und teilen.</p>
       </div>
     </div>
 </div>
